# srh-ss26-iot-project

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  extract_audio_features.py  extract_step_features.py  extract_video_features.py  main.py  pyproject.toml  sample_data_exploration.py
.github/workflows/: dashboard.yml  deploy.yml  kamal-command.yml  test-pr.yml  test.yml
.kamal/: secrets
alembic/: env.py
alembic/versions/: 20260714_0001_initial_postgres.py  20260717_0002_dashboard_backend.py
api/: __init__.py  auth.py  backfill.py  config.py  dashboard.py  database.py  media.py  models.py  pipeline.py  schemas.py  server.py  storage.py
collected_sample_data/1_normal_walk/: motion_20260629_150400.csv  motion_20260629_150543.csv  motion_20260629_150619.csv
collected_sample_data/2_faster_walk/: motion_20260629_150809.csv  motion_20260629_150905.csv  motion_20260629_151005.csv  video_20260629_150905.h264  video_20260629_151005.h264
collected_sample_data/3_long_steps/: motion_20260629_151125.csv  motion_20260629_151229.csv  motion_20260629_151419.csv  video_20260629_151125.h264  video_20260629_151229.h264  video_20260629_151419.h264
collected_sample_data/Normal walk2/: motion_20260706_160525.csv  motion_20260706_160552.csv  motion_20260706_160614.csv  video_20260706_160525.h264  video_20260706_160552.h264  video_20260706_160614.h264
collected_sample_data/Wide step 2/: motion_20260706_160843.csv  motion_20260706_160906.csv  motion_20260706_160924.csv  video_20260706_160843.h264  video_20260706_160906.h264  video_20260706_160924.h264
collected_sample_data/fast walk2/: motion_20260706_160715.csv  motion_20260706_160734.csv  (+4 more)
config/: deploy.dashboard.yml  deploy.yml
dashboards/: features_extraction.py  sample_data_exploration.py
tests/: conftest.py  helpers.py  sample_catalog.py  test_config.py  test_dashboard_backend.py  test_dashboard_processing.py  test_database.py  test_deletion_and_export.py  test_exercises.py  test_experiments.py  test_harness.py  test_models_and_migrations.py  test_pipeline.py  test_public_and_auth.py  test_recordings.py  test_sample_study.py  test_storage.py
web-dashboard/: .dockerignore  .env.example  .prettierignore  CLAUDE.md  Dockerfile  README.md  eslint.config.js  package.json  react-router.config.ts  vite.config.ts
(+47 files in other folders)
