[project]
name = "srh-ss26-iot-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.16.5",
    "boto3>=1.40.0",
    "fastapi>=0.116.1",
    "librosa>=0.11.0",
    "mediapipe>=0.10.35",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pydantic-settings>=2.10.1",
    "psycopg[binary]>=3.2.9",
    "scipy>=1.16.1",
    "sqlalchemy>=2.0.43",
    "soundfile>=0.14.0",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dashboard = [
    "matplotlib>=3.11.0",
    "streamlit>=1.58.0",
]
test = [
    "httpx2",
    "moto[s3]==5.2.2",
    "py-pglite[psycopg,sqlalchemy]==0.5.3",
    "pytest",
    "pytest-cov",
    "pytest-subtests",
    "pytest-timeout",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--strict-markers --tb=short"
filterwarnings = [
    "ignore:aifc was removed in Python 3.13.*:DeprecationWarning:audioread.rawread",
    "ignore:sunau was removed in Python 3.13.*:DeprecationWarning:audioread.rawread",
]
markers = [
    "sample: all-real-media tests",
    "integration: FastAPI + PGlite + Moto tests",
]

[tool.coverage.run]
branch = true
source = ["api"]

[tool.coverage.report]
fail_under = 100
